Add example config for OldCommentRemover. Fix config file loading

--- a/OldCommentRemover/remove_all.cfg
+++ b/OldCommentRemover/remove_all.cfg
@@ -1,8 +1,7 @@
-# This is an example config file for OldCommentRemover.py. It causes the script
-# to remove all comments on /r/BitwiseShiftTest, regardless of when they were
-# posted or by who, essentially clearing out the subreddit.
-
-SUBREDDIT = "BitwiseShiftTest"		# Subreddit name, without the /r/ part.
+# Subreddit name, without the /r/ part. Setting this to None will have the
+# script go through your submissions instead. This automatically sets the
+# USE_DELETE option to True.
+SUBREDDIT = "BitwiseShiftTest"
 # After how long posts get deleted. The given example will delete posts that are
 # 2 days old. To delete any posts, regardless of age, simply set all values to 0.
 REMOVE_AFTER = timedelta(weeks=0, days=0, hours=0, minutes=0)
@@ -16,4 +15,12 @@ DELETE_FILTER = [
 	{"class": None, "text": None}
 ]
 # Ignores certain flairs even if they are matched by the ONLY_DELETE lists before.
-IGNORE_FILTER = []
+IGNORE_FILTER = [
+	# Deletes posts that have both the given flair class and text.
+	{"class": "SOME_CSS_CLASS", "text": "SOME_FLAIR_CLASS"},
+]
+# There are two ways of removing a comments. If this option is False, it will
+# act as a moderator removing comments from their subreddit. If this is true,
+# it will act as a user deleting his own comments. This will however not delete
+# comments that have already been removed by a moderator.
+USE_DELETE = True
