Add and update OldCommentRemover config, update DownvotedCommentRemover info

--- a/OldCommentRemover/remove_all_mine.cfg
+++ b/OldCommentRemover/remove_all_mine.cfg
@@ -1,5 +1,5 @@
-# Remove all your comments from a given subreddit.
-SUBREDDIT = "BitwiseShiftTest"
+# Remove all your comments, everywhere.
+SUBREDDIT = None
 REMOVE_AFTER = timedelta(weeks=0, days=0, hours=0, minutes=0)
 REMOVE_MODERATOR_POSTS = True
 DELETE_FILTER = [
